# ai-summarization-benchmarks

./: .gitignore  README.md  a100-requirements.txt  pyproject.toml  requirements.in  run_experiment_llama2_7b_32k.py  run_experiment_llama2_7b_base_fewshot.py  run_experiment_llama2_7b_chat_4bit.py  run_experiment_llama2_7b_chat_4bit_pipeline.py  run_experiment_llama2_7b_chat_gguf.py  run_experiment_llama2_7b_onnx.py  run_llama2_7b.py
data/: 1000_articles.txt  100_articles.txt  10_articles.txt  data_0_t4_4bit.json  data_10_a100_default_batchsize-2.json  data_11_a100_flash-attn_batchsize-2.json  data_12_a100_flash-attn_batchsize-3.json  data_13_a100_flash-attn_batchsize-4.json  data_14_a100_flash-attn_batchsize-5.json  data_15_a100_flash-attn_batchsize-10.json  data_16_a100_flash-attn.json  data_17_a100_default.json  data_18_a100_flash-4bit.json  data_19_t4_4-bit.json  data_1_t4_8bit.json  data_20_t4_8-bit.json  data_21_t4_vllm_awq.json  data_22_t4_4-bit.json  data_23_t4_8-bit.json  data_24_t4_vllm_serial.json  data_25_a100_vllm_awq.json  data_26_a100_deepspeed.json  data_27_a100_4-bit.json  data_28_t4_vllm_awq.json  data_29_a100_8-bit.json  data_2_a100_4bit.json  data_30_a100_1k_vllm_awq.json  data_3_a100_default.json  data_4_a100_8bit.json  data_5_a100_flashattn.json  data_6_a100_flash4bit.json  data_7_a100_flashattn.json  data_8_a100_default.json  data_9_a100_flash4bit.json  results_0_t4_4bit.json  results_10_a100_default_batchsize-2.json  results_11_a100_flash-attn_batchsize-2.json  results_12_a100_flash-attn_batchsize-3.json  results_13_a100_flash-attn_batchsize-4.json  (+26 more)
(+29 files in other folders)
