[tool.poetry]
name = "ai-summarization-benchmarks"
version = "0.1.0"
description = ""
authors = ["Luc Cary <luc.cary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.16.1"
transformers = "^4.36.2"
pandas = "^2.1.4"
torch = "^2.1.2"
absl-py = "^2.0.0"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
langchain = "^0.1.0"
packaging = "^23.2"

[tool.poetry.group.gpu.dependencies]
flash-attn = "^2.4.2"
packaging = "^23.2"
ninja = "^1.11.1.1"
einops = "^0.7.0"
tensorrt = "^8.6.1.post1"
accelerate = "^0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
